sidebar is responsive - fixed spacing on navbar

--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@ body {
 }
 body .container {
   padding-top: 20vh;
+  min-height: 100vh;
 }
 a {
   text-decoration: none;
